--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -1,6 +1,6 @@
 # Documentation à propos de cette page : https://fshschool.org/docs/sushi/configuration/
 
-id: ans.fhir.fr.documentation
+id: ans.fr.documentation
 canonical: http://interop.esante.gouv.fr/ig/documentation # the last part of canonical and id must be the same
 name: Documentation
 title: Documentation des guides d'implémentation de l'ANS
