--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -11,7 +11,7 @@ status: active
 version: 0.1.0 # shall conforms to Semantic Versioning https://fr.wiktionary.org/wiki/SemVer
 fhirVersion: 4.0.1
 copyrightYear: 2020+
-releaseLabel: ci-build
+releaseLabel: release
 
 parameters:
     shownav: 'true'
