--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -8,7 +8,7 @@ publisher:
   name: ANS
   url: https://esante.gouv.fr
 status: active
-version: 0.1.2 # shall conforms to Semantic Versioning https://fr.wiktionary.org/wiki/SemVer
+version: 0.1.3 # shall conforms to Semantic Versioning https://fr.wiktionary.org/wiki/SemVer
 fhirVersion: 4.0.1
 copyrightYear: 2020+
 releaseLabel: release
@@ -39,12 +39,15 @@ pages:
             title: Déployer une instance HAPI
         valider_res.md:
             title: Valider une ressource contre un profil
+    tests.md:
+        presentations_tests.md:
+            title: Présentation des tests
+        type_cas_tests.md:
+            title: Types de cas de tests
     collaborons.md: 
         title: Collaborons
     autres_ressources.md:
-        title: Autres Ressources
-    tests.md:
-        title: Tests      
+        title: Autres Ressources 
     about.md:
         title: A propos de ce guide
 
@@ -61,9 +64,11 @@ menu:
         Bonnes pratiques: bonnes_pratiques_implementer.html
         Déployer une instance HAPI: instance_hapi.html
         Valider une ressource contre un profil: valider_res.html
+    Tests:
+        Présentation des tests: presentations_tests.html
+        Types de cas de tests: type_cas_tests.html
     Autres ressources:
         Collaborons: collaborons.html
-        Tests: tests.html
         "Spécifications FHIR ": new-tab {{site.data.fhir.path}}index.html
         "Site de l'ANS ": new-tab https://esante.gouv.fr/
     A propos de ce guide: about.html
