--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -20,16 +20,12 @@ pages:
     index.md:
         title: Accueil
     doc_modeler.md:
-        bonnes_pratiques_modeler.md:
-            title: Bonnes pratiques
-        install_dependencies.md:
-            title: Installer les dépendances
         dev_nouvel_ig.md:
-            title: Développement d'un nouvel IG
-        niveau_maturite.md:
-            title: Les niveaux de maturité des IG
+            title: Quick start IG
         erreurs.md:
             title: Les erreurs courantes
+        bonnes_pratiques_modeler.md:
+            title: Bonnes pratiques
         github.md:
             title: Usage de GitHub
     doc_implementer.md:
@@ -42,10 +38,7 @@ pages:
         valider_res.md:
             title: Valider une ressource contre un profil
     tests.md:
-        presentations_tests.md:
-            title: Présentation des tests
-        type_cas_tests.md:
-            title: Types de cas de tests
+        title: Tests
     collaborons.md: 
         title: Collaborons
     autres_ressources.md:
@@ -56,20 +49,16 @@ pages:
 menu:
     Accueil: index.html
     Documentation des FHIR modelers:
-        Bonnes pratiques: bonnes_pratiques_modeler.html
-        Installer les dépendances: install_dependencies.html
-        Développement d'un nouvel IG: dev_nouvel_ig.html
-        Les niveaux de maturité des IG: niveau_maturite.html
+        Quick start IG: dev_nouvel_ig.html
         Les erreurs courantes: erreurs.html
+        Bonnes pratiques: bonnes_pratiques_modeler.html
         Usage de GitHub: github.html
     Documentation des FHIR implementers:
         Quick start FHIR: demarrer_sur_fhir.html
         Bonnes pratiques: bonnes_pratiques_implementer.html
         Déployer une instance HAPI: instance_hapi.html
         Valider une ressource contre un profil: valider_res.html
-    Tests:
-        Présentation des tests: presentations_tests.html
-        Types de cas de tests: type_cas_tests.html
+    Tests: tests.html
     Autres ressources:
         Collaborons: collaborons.html
         "Spécifications FHIR ": new-tab {{site.data.fhir.path}}index.html
