--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -59,8 +59,8 @@ menu:
         Déployer une instance HAPI: instance_hapi.html
         Valider une ressource contre un profil: valider_res.html
     Tests: tests.html
+    Collaborons: collaborons.html
     Autres ressources:
-        Collaborons: collaborons.html
         "Spécifications FHIR ": new-tab {{site.data.fhir.path}}index.html
         "Site de l'ANS ": new-tab https://esante.gouv.fr/
-    A propos de ce guide: about.html
+        "A propos de ce guide": about.html
