--- a/.gitignore
+++ b/.gitignore
@@ -4,22 +4,15 @@ fsh-generated
 temp
 template
 output
-local-template
-local-template/*
+local-template*
 
 # Ignore large files and frequently changed files in input-cache #
 ##################################################################
-input-cache/org.hl7.fhir.publisher.jar
-input-cache/publisher.jar
-input-cache/schemas/
-# input-cache/txcache/
-input-cache/*
 
 # OS generated files #
 ######################
 Thumbs.db
-.DS_Store
-.DS_Store?
+.DS_Store*
 
 # backup files #
 ################
@@ -33,21 +26,7 @@ Thumbs.db
 # Microsoft Office temp files #
 ###############################
 ~$*.xlsx
-input-cache/txcache/all-systems.cache
-input-cache/txcache/http___cancerstaging.org.cache
-input-cache/txcache/http___varnomen.hgvs.org.cache
-input-cache/txcache/http___www.genenames.org.cache
-input-cache/txcache/http___www.ncbi.nlm.nih.gov_clinvar.cache
-input-cache/txcache/http___www.sequenceontology.org_.cache
-input-cache/txcache/icd-10-cm.cache
-input-cache/txcache/iso3166.cache
-input-cache/txcache/lang.cache
-input-cache/txcache/loinc.cache
-input-cache/txcache/rxnorm.cache
-input-cache/txcache/snomed.cache
-input-cache/txcache/ucum.cache
-input-cache/txcache/umls.cache
-input-cache
+input-cache*
 
 # Automated testing
 .classpath
