--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -12,6 +12,7 @@ version: 0.1.4 # shall conforms to Semantic Versioning https://fr.wiktionary.org
 fhirVersion: 4.0.1
 copyrightYear: 2020+
 releaseLabel: trial-use
+jurisdiction: urn:iso:std:iso:3166#FR "FRANCE"
 
 parameters:
     shownav: 'true'
