--- a/.github/workflows/a_githubPages.yml
+++ b/.github/workflows/a_githubPages.yml
@@ -13,7 +13,9 @@ jobs:
           path: igSource
       - uses: ansforge/IG-workflows@addAction
         with:      
-          validator_cli: "true"        
+          bake: "true"
+          nos: "true"
+          validator_cli: "true"     
           repo_ig: "./igSource"   
           github_page: "true"
           github_page_token: ${{ secrets.ANS_IG_API_TOKEN  }}
