--- a/.github/workflows/a_release.yml
+++ b/.github/workflows/a_release.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/checkout@v3
         with:      
           path: igSource
-      - uses: ansforge/IG-workflows@addAction
+      - uses: ansforge/IG-workflows@v0.2.0
         with:      
           repo_ig: "./igSource"   
           github_page: "true"
@@ -21,4 +21,4 @@ jobs:
           validator_cli: "true"
           publish_repo: "ansforge/IG-website-release"
           publish_repo_token :  ${{ secrets.ANS_IG_API_TOKEN }} 
-          publish_path_outpout : "./IG-website-release/www/ig"
+          publish_path_outpout : "./IG-website-release/www/ig/fhir"
