--- a/.github/workflows/a_githubPages.yml
+++ b/.github/workflows/a_githubPages.yml
@@ -18,6 +18,6 @@ jobs:
           github_page_token: ${{ secrets.GITHUB_TOKEN }}
           bake: "false"
           validator_cli: "true"
-          generate_testscript: "true"
-          generate_plantuml : "true"
-          generate_mapping_plantuml : "true"
+          generate_testscript: "false"
+          generate_plantuml : "false"
+          generate_mapping_plantuml : "false"
