--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -46,6 +46,8 @@ pages:
         title: Autres Ressources 
     about.md:
         title: A propos de ce guide
+    changes.md:
+        title: Historique des changements
 
 menu:
     Accueil: index.html
@@ -65,3 +67,4 @@ menu:
         "Spécifications FHIR ": new-tab {{site.data.fhir.path}}index.html
         "Site de l'ANS ": new-tab https://esante.gouv.fr/
         "A propos de ce guide": about.html
+    Historique: changes.html
