--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -51,12 +51,12 @@ pages:
 
 menu:
     Accueil: index.html
-    Documentation des FHIR modelers:
+    Documentation pour auteurs FHIR:
         Quick start IG: dev_nouvel_ig.html
         Bonnes pratiques: bonnes_pratiques_modeler.html
         Les erreurs courantes: erreurs.html
         Usage de GitHub: github.html
-    Documentation des FHIR implementers:
+    Documentation pour implémenteurs FHIR:
         Quick start FHIR: demarrer_sur_fhir.html
         Bonnes pratiques: bonnes_pratiques_implementer.html
         Déployer une instance HAPI: instance_hapi.html
