--- a/sushi-config.yaml
+++ b/sushi-config.yaml
@@ -21,7 +21,7 @@ pages:
     index.md:
         title: Accueil
     doc_ps.md:
-        title: Documentation des professionnels de santé
+        title: Professionnels de santé
     doc_modeler.md:
         dev_nouvel_ig.md:
             title: Quick start IG
@@ -53,13 +53,13 @@ pages:
 
 menu:
     Accueil: index.html
-    Documentation des professionnels de santé : doc_ps.html
-    Documentation des FHIR modelers:
+    Professionnels de santé : doc_ps.html
+    FHIR modelers:
         Quick start IG: dev_nouvel_ig.html
         Bonnes pratiques: bonnes_pratiques_modeler.html
         Les erreurs courantes: erreurs.html
         Usage de GitHub: github.html
-    Documentation des FHIR implementers:
+    FHIR implementers:
         Quick start FHIR: demarrer_sur_fhir.html
         Bonnes pratiques: bonnes_pratiques_implementer.html
         Déployer une instance HAPI: instance_hapi.html
