--- a/ig.ini
+++ b/ig.ini
@@ -3,8 +3,7 @@
 # see comments below for instructions
 
 ig = fsh-generated/resources/ImplementationGuide-ans.fr.documentation.json
-template = https://github.com/ansforge/IG-template/tree/nr-add-template
-
+template = ans.fr.template#0.2.0
 
 
 ##########################
